fix layout misalignment in forms

--- a/app/assets/stylesheets/fairdeals/ocss/inputs.scss
+++ b/app/assets/stylesheets/fairdeals/ocss/inputs.scss
@@ -612,6 +612,7 @@ input.date.hasDatepicker
 --------------------------------------------------------------------------------- */
 
 .labels_ta_r ol li.string label,
+.labels_ta_r ol li.stringish label,
 .labels_ta_r ol li.select label,
 .labels_ta_r ol li.date label,
 .labels_ta_r ol li.password label,
