--- a/app/assets/stylesheets/fairdeals/style.scss
+++ b/app/assets/stylesheets/fairdeals/style.scss
@@ -809,6 +809,9 @@ h1
 
 input[type="text"],
 input[type="password"],
+input[type="tel"],
+input[type="url"],
+input[type="email"],
 textarea, select
 {
     -moz-border-radius: 4px;
