--- a/app/assets/stylesheets/ocss/inputs.scss
+++ b/app/assets/stylesheets/ocss/inputs.scss
@@ -647,6 +647,7 @@ input.date.hasDatepicker
 --------------------------------------------------------------------------------- */
 
 .labels_ta_r ol li.string label,
+.labels_ta_r ol li.stringish label,
 .labels_ta_r ol li.select label,
 .labels_ta_r ol li.date label,
 .labels_ta_r ol li.password label,
