--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1048,6 +1048,9 @@ h4
 
 input[type="text"],
 input[type="password"],
+input[type="tel"],
+input[type="url"],
+input[type="email"],
 textarea, select
 {
     -moz-border-radius: 4px;
